# patate

./: .gitignore  CMakeLists.txt  Doxyfile  notes.txt  readme
Patate/: patate_gallery.mdoc  patate_tutorials.mdoc  shelves.h  vitelotte.h  vitelotte_curves.h  vitelotte_curves_io.h  vitelotte_gl.h  vitelotte_io.h
Patate/Shelves/: CMakeLists.txt  shelves.mdoc  shelves_user_manual.mdoc
Patate/Shelves/src/: bbox.h  boundedHeapPriorityQueue.h  kdtree.h
Patate/Vitelotte/: CMakeLists.txt  vitelotte.mdoc  vitelotte_example.mdoc  vitelotte_example_common.mdoc  vitelotte_example_editor.mdoc  vitelotte_example_gen_mesh.mdoc  vitelotte_example_gl_viewer.mdoc  vitelotte_example_mvg_editor.mdoc  (+14 more)
Patate/common/: CMakeLists.txt  defines.h
Patate/common/GLUtils/: macros.h  technique.h
Patate/common/gl_utils/: color.h  glmesh.h  glmesh.hpp  macros.h  shader.h  shader.hpp
Patate/common/surface_mesh/: Surface_mesh.h  objReader.h  objReader.hpp  objWriter.h  objWriter.hpp  properties.h  surfaceMesh.h  types.h
cmake/: ConfigureTesting.cmake  FindFREEIMAGEPLUS.cmake  FindGLFW3.cmake
doc/: Doxyfile.in  images.css  layout.xml  patate.css
examples/: CMakeLists.txt
examples/Grenaille/cpp/: CMakeLists.txt
examples/Vitelotte/: CMakeLists.txt
examples/Vitelotte/Data/testSurface/: constraints.cons  output.qvg  output1.qvg  vertex.2.off
examples/Vitelotte/common/: CMakeLists.txt  bezierCurve.cpp  bezierCurve.h  glLineRenderer.cpp  glLineRenderer.h  glPointRenderer.cpp  glPointRenderer.h  orthographicCamera.cpp  orthographicCamera.h  plotObj.h  shaders.cpp  shaders.h  textFormatter.cpp  textFormatter.h  trackball.cpp  trackball.h  vgMeshWithCurves.cpp  vgMeshWithCurves.h  vgMeshWithCurvesReader.cpp  vgMeshWithCurvesReader.h  vgMeshWithCurvesWriter.cpp  vgMeshWithCurvesWriter.h  vgNodeRenderer.cpp  vgNodeRenderer.h
examples/Vitelotte/common/shaders/: frag_lines.glsl  frag_points.glsl  geom_lines.glsl  geom_points.glsl  vert_lines.glsl  vert_points.glsl
examples/Vitelotte/editor/: document.h  editor.h  mainWindow.h  valueEditor.cpp  valueEditor.h
examples/Vitelotte/gen_mesh/: CMakeLists.txt  gen_mesh.cpp  triangle.h
examples/Vitelotte/gl2_viewer/: .gitignore
examples/Vitelotte/gl2_viewer/web/: index.html  style.css
examples/Vitelotte/gl_viewer/: CMakeLists.txt  glViewer.h
examples/Vitelotte/mvg_editor/: CMakeLists.txt  document.cpp  document.h  editor.cpp  editor.h  main.cpp  mainWindow.cpp  mainWindow.h  valueEditor.cpp  valueEditor.h
examples/Vitelotte/mvg_viewer/: CMakeLists.txt  main.cpp  mvgViewer.cpp  mvgViewer.h  view.cpp  view.h  window.cpp  window.h
examples/Vitelotte/mvgtk/: CMakeLists.txt  changeColorSpaceCommand.cpp  changeColorSpaceCommand.h  checkCommand.cpp  checkCommand.h  compactCommand.cpp  compactCommand.h  convertColorSpaceCommand.cpp  convertColorSpaceCommand.h  convertCommand.cpp  convertCommand.h  curvesToNodesCommand.cpp  curvesToNodesCommand.h  finalizeCommand.cpp  finalizeCommand.h  main.cpp  mvgtk.cpp  mvgtk.h  plotCommand.cpp  plotCommand.h  simplifyCommand.cpp  simplifyCommand.h  solveCommand.cpp  solveCommand.h
examples/Vitelotte/samples/: neko.mvg  poring.mvg  simple.mvg  sphere.mvg  umbrella.mvg  yin-yang.mvg
examples/Vitelotte/tutorial/: CMakeLists.txt  tutorial.cpp
examples/cpp/: CMakeLists.txt  grenaille_basic_cpu.cpp  grenaille_binding.cpp  grenaille_reference.cpp  ssgls.cu
examples/opengl/: circleGL.h
examples/python/: ssgls.cu  ssgls.py
examples/vitelotte/: CMakeLists.txt  application.cpp  application.h
examples/vitelotte/cmake/: FindGLFW3.cmake
examples/vitelotte/common/: bezierCurve.h  glLineRenderer.cpp  glPointRenderer.cpp  glPointRenderer.h  orthographicCamera.cpp  orthographicCamera.h  plotObj.h  textFormatter.cpp  trackball.cpp  vgMeshWithCurves.cpp  vgMeshWithCurves.h  vgMeshWithCurvesReader.cpp  vgMeshWithCurvesReader.h  vgMeshWithCurvesWriter.cpp  vgMeshWithCurvesWriter.h  vgNodeRenderer.cpp  vgNodeRenderer.h
examples/vitelotte/common/shaders/: frag_lines.glsl  frag_points.glsl  geom_points.glsl  vert_lines.glsl  vert_points.glsl
examples/vitelotte/editor/: CMakeLists.txt  document.cpp  document.h  editor.cpp  editor.h  editor.qrc  glLineRenderer.cpp  glLineRenderer.h  glPointRenderer.cpp  glPointRenderer.h  main.cpp  mainWindow.cpp  mainWindow.h  shaders.cpp  valueEditor.cpp  valueEditor.h
examples/vitelotte/editor/shaders/: frag_lines.glsl  geom_lines.glsl
examples/vitelotte/gl2_viewer/: CMakeLists.txt  gl2Viewer.cpp  glViewer.h
examples/vitelotte/gl2_viewer/web/: gl2_viewer.js  index.html  style.css  test.mvg
examples/vitelotte/gl_viewer/: CMakeLists.txt  glViewer.cpp  glViewer.h
examples/vitelotte/mvgtk/: CMakeLists.txt  checkCommand.cpp  checkCommand.h  compactCommand.cpp  convertCommand.cpp  convertCommand.h  curvesToNodesCommand.cpp  curvesToNodesCommand.h  finalizeCommand.cpp  finalizeCommand.h  main.cpp  mvgtk.cpp  mvgtk.h  plotCommand.cpp  plotCommand.h  simplifyCommand.cpp  simplifyCommand.h  solveCommand.cpp  solveCommand.h
examples/vitelotte/samples/: neko.mvg  poring.mvg  simple.mvg  sphere.mvg  umbrella.mvg  yin-yang.mvg
examples/vitelotte/solver/: CMakeLists.txt  solver.cpp
tests/Vitelotte/: CMakeLists.txt  element.cpp  element_mesh.cpp  fem_mesh.cpp  fv.cpp  fv_mesh.cpp  quadratic_mesh.cpp  surface_mesh.cpp  testBezierPath.cpp  test_color_spaces.cpp
tests/Vitelotte/finalize/: edge_cc_dst.mvg  edge_cc_src.mvg  edge_ic_dst.mvg  edge_ic_src.mvg  edge_invalid_dst.mvg  edge_invalid_src.mvg  edge_uc_dst.mvg  edge_uc_src.mvg  edge_ui_dst.mvg  edge_ui_src.mvg  edge_uu_dst.mvg  edge_uu_src.mvg  vx_c0u1_dst.mvg  vx_c0u1_src.mvg  vx_cons_cons_dst.mvg  vx_cons_cons_src.mvg  vx_cons_dst.mvg  vx_cons_src.mvg  vx_cons_unk_dst.mvg  vx_cons_unk_src.mvg  vx_cu_cross_dst.mvg  vx_cu_cross_src.mvg  vx_cu_singular_dst.mvg  vx_cu_singular_src.mvg  vx_empty_src.mvg  vx_singular_dst.mvg  vx_singular_src.mvg  vx_u0u1_dst.mvg  vx_u0u1_src.mvg  vx_u_cross_dst.mvg  vx_u_cross_src.mvg  vx_unk_dst.mvg  vx_unk_src.mvg  vx_unk_unk_dst.mvg  vx_unk_unk_src.mvg
tools/: bl_export_mvg.py
(+116 files in other folders)
